[gd_scene load_steps=6 format=3 uid="uid://b542caanfm35v"]

[ext_resource type="Script" path="res://scenes/arrow.gd" id="1_m6m3a"]
[ext_resource type="Texture2D" uid="uid://3xe1vgdnc15" path="res://assets/art/arrow.png" id="2_prgyu"]

[sub_resource type="Animation" id="Animation_t826q"]
resource_name = "arc_movement_cpu"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 150, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, 150, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, -150, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, 150, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0472, 0.0, -1.0472, 0.0]
}

[sub_resource type="Animation" id="Animation_yx1fs"]
resource_name = "arc_movement_player"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0472, 0.0, -1.0472, 0.0]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, -150, 0, 0, 0, 0, 0, 0, 0, 0, 0, -150, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 150, 0, 0, 0, 0, 0, 0, 0, 0, 0, -150, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.75, 0.75), Vector2(2, 2), Vector2(0.75, 0.75), Vector2(2, 2), Vector2(0.75, 0.75)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v6e3a"]
_data = {
"arc_movement_cpu": SubResource("Animation_t826q"),
"arc_movement_player": SubResource("Animation_yx1fs")
}

[node name="Arrow" type="Node2D"]
position = Vector2(250, 540)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_m6m3a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v6e3a")
}

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_prgyu")
offset = Vector2(2, 0)

[node name="ArrowPosition" type="Marker2D" parent="."]
position = Vector2(250, 540)

[node name="CpuStartTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="TooFastTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="TooFastTimer" to="." method="_on_too_fast_timer_timeout"]
